# mlops-tps-2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py  train.py  viz.py
.github/workflows/: python-pck.yml
docker/: Dockerfile.mlflow
github/workflows/: format_python.yml
src/config/: .env.dist  config.yaml  settings.py
src/materializers/: materializer_bucket_client.py  materializer_data_source.py  materializer_dataset.py
src/models/: model_bucket_client.py  model_data_source.py  model_dataset.py  model_datasource_metadata.py  model_huggingface_client.py
src/pipelines/: pipeline_datalake.py  pipeline_end_to_end.py  pipeline_experiment.py
src/services/: service_data_uploader.py
src/steps/data/: data_extractor.py  data_sources_uploaders.py  datalake_initializers.py  dataset_preparators.py
src/steps/training/: model_appraisers.py  model_evaluators.py  model_registerers.py  model_trainers.py
src/utils/: mlflow_helper.py  tracker_helper.py
stack/: recreate-local-stack.sh  setup-local-stack.sh
tests/: test_data_sources.py
